got the game running and world loading - items arent rendering right